# inu-rust

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
assets/: partitions-esp32s3.csv
docs/: Learning.md  Setup.md
lib/hardware/: Cargo.toml
lib/hardware/src/: lib.rs  switch.rs  ws2812.rs
lib/os/: Cargo.toml
lib/os/src/: error.rs  flash.rs  kernel.rs  lib.rs  networking.rs  pin_mgr.rs  settings.rs  types.rs
lib/os/src/physical/: esp32s3.rs  mod.rs
src/: main.rs  release.rs
tools/: cfg  ci
tools/inu-cfg/: cfg.py  requirements.txt
tools/inu-cfg/inu_cfg/: __init__.py  settings.py  validator.py
