workspace = { members = ["lib/os"] }

[package]
name = "inu-rust"
version = "0.1.0"
authors = ["Jordon Scott <jordonsc@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.80"

[[bin]]
name = "inu-rust"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4" }
esp-idf-svc = { version = "0.49" }
inu-os = { version = "0.1.0", path = "lib/os", features = ["esp32s3"] }
inu-hardware = { version = "0.1.0", path = "lib/hardware" }

[build-dependencies]
embuild = "0.32.0"

[profile.release]
opt-level = "s"

[profile.dev]
#debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"
